--- a/server/package.json
+++ b/server/package.json
@@ -8,18 +8,27 @@
     "server": "nodemon ./dist/index.js",
     "watch": "tsc -w",
     "build": "tsc",
-    "dev": "concurrently \"npm run watch\" \"npm run server\""
+    "dev": "concurrently \"npm run watch\" \"npm run server\" \"npm run watch-views\"",
+    "copy-files": "copyfiles -u 1 \"src/views/**/*\" dist/ ",
+    "watch-views": "nodemon --watch src/views -e ejs -x \"npm run copy-files\""
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@prisma/client": "^6.6.0",
+    "bullmq": "^5.48.1",
+    "concurrently": "^9.1.2",
+    "copyfiles": "^2.4.1",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
-    "nodemon": "^3.1.9"
+    "nodemailer": "^6.10.0",
+    "nodemon": "^3.1.9",
+    "prisma": "^6.6.0",
+    "sib-api-v3-sdk": "^8.5.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
