--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^6.6.0",
+    "bcrypt": "^5.1.1",
     "bullmq": "^5.48.1",
     "concurrently": "^9.1.2",
     "copyfiles": "^2.4.1",
@@ -28,11 +29,15 @@
     "nodemailer": "^6.10.0",
     "nodemon": "^3.1.9",
     "prisma": "^6.6.0",
-    "sib-api-v3-sdk": "^8.5.0"
+    "sib-api-v3-sdk": "^8.5.0",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
+    "@types/ejs": "^3.1.5",
     "@types/express": "^5.0.1",
+    "@types/nodemailer": "^6.4.17",
     "typescript": "^5.8.3"
   }
 }
