--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -4,10 +4,10 @@
     "outDir": "dist",
     "lib": ["es2020"],
     "target": "es2020",
-    "module": "Node16",
-    "moduleResolution": "Node16",
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
     "esModuleInterop": true,
-    "types": ["node"],
+    "types": ["node", "express"],
     "strict": true
   },
   "include": ["src"]
