--- a/server/package.json
+++ b/server/package.json
@@ -30,6 +30,7 @@
     "nodemon": "^3.1.9",
     "prisma": "^6.6.0",
     "sib-api-v3-sdk": "^8.5.0",
+    "uuid": "^11.1.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
@@ -38,6 +39,7 @@
     "@types/ejs": "^3.1.5",
     "@types/express": "^5.0.1",
     "@types/nodemailer": "^6.4.17",
+    "@types/uuid": "^10.0.0",
     "typescript": "^5.8.3"
   }
 }
