--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,8 @@
     "dotenv": "^16.5.0",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
+    "framer-motion": "^12.6.5",
+    "jsonwebtoken": "^9.0.2",
     "nodemailer": "^6.10.0",
     "nodemon": "^3.1.9",
     "prisma": "^6.6.0",
@@ -38,6 +40,7 @@
     "@types/cors": "^2.8.17",
     "@types/ejs": "^3.1.5",
     "@types/express": "^5.0.1",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/nodemailer": "^6.4.17",
     "@types/uuid": "^10.0.0",
     "typescript": "^5.8.3"
