--- a/server/package.json
+++ b/server/package.json
@@ -26,8 +26,10 @@
     "dotenv": "^16.5.0",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
+    "express-rate-limit": "^7.5.0",
     "framer-motion": "^12.6.5",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "nodemailer": "^6.10.0",
     "nodemon": "^3.1.9",
     "prisma": "^6.6.0",
