--- a/server/package.json
+++ b/server/package.json
@@ -26,12 +26,14 @@
     "dotenv": "^16.5.0",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
+    "express-fileupload": "^1.5.1",
     "express-rate-limit": "^7.5.0",
     "framer-motion": "^12.6.5",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "nodemailer": "^6.10.0",
     "nodemon": "^3.1.9",
+    "os": "^0.1.2",
     "prisma": "^6.6.0",
     "sib-api-v3-sdk": "^8.5.0",
     "uuid": "^11.1.0",
@@ -42,6 +44,7 @@
     "@types/cors": "^2.8.17",
     "@types/ejs": "^3.1.5",
     "@types/express": "^5.0.1",
+    "@types/express-fileupload": "^1.5.1",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/nodemailer": "^6.4.17",
     "@types/uuid": "^10.0.0",
