--- a/server/package.json
+++ b/server/package.json
@@ -36,6 +36,8 @@
     "os": "^0.1.2",
     "prisma": "^6.6.0",
     "sib-api-v3-sdk": "^8.5.0",
+    "socket": "^0.14.57",
+    "socket.io": "^4.8.1",
     "uuid": "^11.1.0",
     "zod": "^3.24.2"
   },
