--- a/server/package.json
+++ b/server/package.json
@@ -29,6 +29,7 @@
     "express-fileupload": "^1.5.1",
     "express-rate-limit": "^7.5.0",
     "framer-motion": "^12.6.5",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "nodemailer": "^6.10.0",
